Fixed Search Bar/ Gear spacing

--- a/public/Tuiter/explore.css
+++ b/public/Tuiter/explore.css
@@ -99,7 +99,7 @@
 .wd-input-bar{
     background-color: gray;
     color: lightgray;
-    width: 85%;
+    width: 75%;
     height: 30px;
     border-style: none;
     border-radius: 10px;
